--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,10 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+Version 6.2.2
+=============
+
+- #451858 Fix date_timezone_set() when date is empty while adding new item.
 -  Fix date_limit_format() to be sure the 'T' is stripped out of ISO dates with only date or only time.
 - #432368 Don't force default value in exposed filter if default is empty.
 - #369020 Switch '+1 Sunday' to 'First Sunday' to over PHP5 bug.
