--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Version 6.2-dev
 Version 6.2.2
 =============
 
+- #342357 Make jQuery Timepicker optional.
 - #466222 Fix Dutch translations.
 - #473308 Add handling for year-only date stored in timestamp field.
 - #482436 Remove deprecated code to remove empty field values, CCK does that now.
